--- a/cityplanning/src/index.css
+++ b/cityplanning/src/index.css
@@ -20,6 +20,10 @@
 }
 
 body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
   background-color: var(--background-color);
   color: var(--nine-hundred-fifty);
 }
