--- a/cityplanning/src/index.css
+++ b/cityplanning/src/index.css
@@ -24,6 +24,6 @@ body {
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
-  background-color: var(--background-color);
+  background-color: var(--one-hundred);
   color: var(--nine-hundred-fifty);
 }
